Revision history for Perl extension MooseX::SimpleConfig

  - Fixed configfile attribute examples
  - Added metadata to Makefile.PL

0.06 - Apr 12, 2010
  - Depend on at least version 0.19 of Config::Any for flatten_to_hash
    support.

0.05 - Jan 22, 2010
   - Allow multiple config files to be loaded and merged.
     Patch in RT#48552 from Sawyer X

0.04 - Nov 04, 2009
    - Allow options to be passed through to Config::Any more easily.

0.03 - Jan 23, 2008
    - Mostly just added pod and tests for configfile
      defaulting

0.02 - Dec 19, 2007
    - Skip the tests if neither of YAML or YAML::Syck is
      installed (but don't make it a test requirement,
      some people won't be using this with YAML at all).

0.01 - Dec 18, 2007
    - Initial release